# intervals

./: .gitignore  Intervals.sln  LICENSE
CPP/: CMakeLists.txt
CPP/src/: CMakeLists.txt  backports.h  container.h  intervals.h  main.cpp
CPP/test/: CMakeLists.txt
CPP/test/src/: CMakeLists.txt  container_tests.cpp  container_tests.h  intervals_tests.cpp  main.cpp
CSharp/: Intervals.sln
CSharp/Intervals/: BinaryTree.cs  IIntervalCollection.cs  Interval.cs  IntervalStartComparer.cs  IntervalTreeNode.cs  Intervals.csproj  LinearIntervalCollection.cs  SortedTreeIntervalCollection.cs  TreeNode.cs
CSharp/Intervals.Tests/: IntervalTests.cs  Intervals.Tests.csproj  LinearContainerTests.cs  TreeContainerTests.cs
CSharp/Intervals.Tests/Properties/: AssemblyInfo.cs
CSharp/Intervals/Properties/: AssemblyInfo.cs
Intervals/: BinaryTree.cs  IIntervalCollection.cs  Interval.cs  IntervalStartComparer.cs  IntervalTreeNode.cs  Intervals.csproj  LinearIntervalCollection.cs  SortedTreeIntervalCollection.cs  TreeNode.cs
Intervals.Tests/: IntervalTests.cs  Intervals.Tests.csproj  LinearContainerTests.cs  TreeContainerTests.cs
Intervals.Tests/Properties/: AssemblyInfo.cs
Intervals/Properties/: AssemblyInfo.cs
